Corrigidas configurações Docker para PHP. php.ini configurado.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,17 @@ services:
     image: php:8.2-apache
     container_name: php-apache
     volumes:
-      - .:/var/www/html:cached
+      - .:/var/www/html
+      - ./php/php.ini:/usr/local/etc/php/php.ini
     ports:
       - "80:80"
     depends_on:
       - db
+    build:
+      context: .
+      dockerfile: ./php/Dockerfile
+    environment:
+      APACHE_DOCUMENT_ROOT: /var/www/html
 
   db:
     image: mysql:8.0
@@ -30,7 +36,7 @@ services:
     environment:
       PMA_HOST: db
       PMA_USER: root
-      PMA_PASSWORD: rootpassword
+      PMA_PASSWORD: root
     ports:
       - "8080:80"
     depends_on:
