--- a/php/php.ini
+++ b/php/php.ini
@@ -1,4 +1,5 @@
-display_errors=On
-error_reporting=E_ALL
-upload_max_filesize=50M
-post_max_size=50M
+display_errors = On
+error_reporting = E_ALL
+memory_limit = 256M
+upload_max_filesize = 50M
+post_max_size = 50M
